Ignore MDX files in prettier
Prettier does not support MDX version 2+, so it breaks some stuff when run on MDX files

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,6 @@
 data
 public/datasets
+
+# ignore MDX files, as prettier still does not support MDX 2+:
+# https://github.com/prettier/prettier/issues/12209
+*.mdx
