--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "lint": "next lint"
   },
   "dependencies": {
@@ -46,6 +46,7 @@
     "eslint": "9.33.0",
     "eslint-config-next": "15.5.0",
     "eslint-config-prettier": "10.1.8",
+    "pagefind": "^1.3.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
     "typescript": "5.9.2"
