--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind && cp -r public/_pagefind out",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@citation-js/core": "0.7.18",
