--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,19 @@ classifiers = [
 ]
 requires-python = "==3.13.7"
 dependencies = [
+    "more-itertools==10.7.0",
     "pyyaml==6.0.2",
     "rich==14.1.0",
     "toponetx==0.2.0",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff==0.12.7",
+]
+
+[tool.ruff.format]
+docstring-code-format = true
 
 [tool.ruff.lint]
 select = [
