Fetch metadata for DOI citations

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@citation-js/core": "0.7.21",
     "@citation-js/plugin-bibtex": "0.7.21",
     "@citation-js/plugin-csl": "0.7.21",
+    "@citation-js/plugin-doi": "0.7.21",
     "@fortawesome/fontawesome-svg-core": "7.1.0",
     "@fortawesome/free-brands-svg-icons": "7.1.0",
     "@fortawesome/free-solid-svg-icons": "7.1.0",
