--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
   "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindStylesheet": "./src/global.css",
+  "tailwindStylesheet": "./src/app/globals.css",
   "tailwindFunctions": ["classnames"]
 }
