--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,13 @@ dependencies = [
     "pyyaml==6.0.3",
     "rich==14.2.0",
     "toponetx==0.2.0",
+    "networkx==3.6.1",
 ]
 
 [dependency-groups]
 dev = [
     "ruff==0.14.9",
+    "types-networkx",
 ]
 
 [tool.ruff.format]
