--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rehype-highlight": "7.0.2",
     "rehype-starry-night": "2.2.0",
     "remark-frontmatter": "5.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-mdx-frontmatter": "5.2.0",
     "tailwindcss": "4.1.18"
   },
