--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "@mdx-js/loader": "3.1.1",
     "@mdx-js/react": "3.1.1",
     "@next/mdx": "16.1.6",
-    "@tailwindcss/postcss": "4.2.0",
     "@tailwindcss/typography": "0.5.19",
+    "@tailwindcss/webpack": "4.2.0",
     "chart.js": "4.5.1",
     "chartjs-adapter-date-fns": "3.0.0",
     "chartjs-plugin-datalabels": "2.2.0",
     "classnames": "2.5.1",
     "next": "16.1.6",
-    "postcss": "8.5.6",
     "react": "19.2.4",
     "react-chartjs-2": "5.3.1",
     "react-dom": "19.2.4",
