--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mdx-js/loader": "3.1.1",
     "@mdx-js/react": "3.1.1",
     "@next/mdx": "16.1.6",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "0.5.19",
     "@tailwindcss/webpack": "4.2.1",
     "chart.js": "4.5.1",
